--- a/log.1
+++ b/log.1
@@ -1,22 +1,23 @@
-[INFO|10:28:58]: Started loading resources. 
-[FINE|10:28:58]: Sprite Ship loaded. 
-[FINE|10:28:58]: Sprite ShipDestroyed loaded. 
-[FINE|10:28:58]: Sprite Bullet loaded. 
-[FINE|10:28:58]: Sprite EnemyBullet loaded. 
-[FINE|10:28:58]: Sprite EnemyBulletN loaded. 
-[FINE|10:28:58]: Sprite EnemyBulletH loaded. 
-[FINE|10:28:58]: Sprite EnemyShipA1 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipA2 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipB1 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipB2 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipC1 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipC2 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipSpecial loaded. 
-[FINE|10:28:58]: Sprite Explosion loaded. 
-[FINE|10:28:58]: Sprite Explosion2 loaded. 
-[FINE|10:28:58]: Sprite Explosion3 loaded. 
-[FINE|10:28:58]: Sprite Explosion4 loaded. 
-[FINE|10:28:58]: Sprite Item loaded. 
-[INFO|10:28:58]: Finished loading the sprites. 
-[WARNING|10:28:58]: Loading failed. 
-[INFO|10:28:58]: Starting 448x520 title screen at 60 fps. 
+[INFO|8:58:21]: Started loading resources. 
+[FINE|8:58:21]: Sprite Ship loaded. 
+[FINE|8:58:21]: Sprite ShipDestroyed loaded. 
+[FINE|8:58:21]: Sprite Bullet loaded. 
+[FINE|8:58:21]: Sprite EnemyBullet loaded. 
+[FINE|8:58:21]: Sprite EnemyBulletN loaded. 
+[FINE|8:58:21]: Sprite EnemyBulletH loaded. 
+[FINE|8:58:21]: Sprite EnemyShipA1 loaded. 
+[FINE|8:58:21]: Sprite EnemyShipA2 loaded. 
+[FINE|8:58:21]: Sprite EnemyShipB1 loaded. 
+[FINE|8:58:21]: Sprite EnemyShipB2 loaded. 
+[FINE|8:58:21]: Sprite EnemyShipC1 loaded. 
+[FINE|8:58:21]: Sprite EnemyShipC2 loaded. 
+[FINE|8:58:21]: Sprite EnemyShipSpecial loaded. 
+[FINE|8:58:21]: Sprite Explosion loaded. 
+[FINE|8:58:21]: Sprite Explosion2 loaded. 
+[FINE|8:58:21]: Sprite Explosion3 loaded. 
+[FINE|8:58:21]: Sprite Explosion4 loaded. 
+[FINE|8:58:21]: Sprite Item loaded. 
+[FINE|8:58:21]: Sprite ShipLive loaded. 
+[INFO|8:58:21]: Finished loading the sprites. 
+[INFO|8:58:21]: Finished loading the fonts. 
+[INFO|8:58:21]: Starting 448x520 title screen at 60 fps. 
